# cloudflare-email-routing-tool

./: .env.example  .gitignore  README.md  pyproject.toml
emailrouting/: main.py
